--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -35,6 +36,6 @@ ext {
     materialVersion = '1.1.0'
     coroutines = '1.3.4'
     gradleVersion = '3.4.0'
-    navigationVersion = '1.0.0-alpha07'
+    navigationVersion = "2.3.0"
     dataBindingCompilerVersion = gradleVersion
 }
