--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,12 +64,13 @@ dependencies {
 
     implementation "androidx.fragment:fragment-ktx:1.3.0-beta01"
 
-// Material design
+    // Material design
     implementation "com.google.android.material:material:$rootProject.materialVersion"
 
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1'
+    androidTestImplementation "org.mockito:mockito-android:2.28.2"
 }
