--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,17 @@
 
 buildscript {
     ext.kotlin_version = '1.4.10'
+    ext.hilt_version = '2.28-alpha'
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.1"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -33,9 +35,10 @@ ext {
     roomVersion = '2.2.5'
     archLifecycleVersion = '2.2.0'
     coreTestingVersion = '2.1.0'
-    materialVersion = '1.1.0'
+    materialVersion = '1.2.1'
     coroutines = '1.3.4'
     gradleVersion = '3.4.0'
-    navigationVersion = "2.3.0"
+    navigationVersion = "2.3.1"
+    hilt_version = '2.28-alpha'
     dataBindingCompilerVersion = gradleVersion
 }
