--- a/build.gradle
+++ b/build.gradle
@@ -40,5 +40,6 @@ ext {
     gradleVersion = '3.4.0'
     navigationVersion = "2.3.1"
     hilt_version = '2.28-alpha'
+    hilt_jetpack = "1.0.0-alpha02"
     dataBindingCompilerVersion = gradleVersion
 }
